--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,12 +19,12 @@
     --color-surface-500: #717171;
     --color-surface-400: #8b8b8b;
 
-    --color-tonal-900: #161b13;
-    --color-tonal-800: #2b3028;
-    --color-total-700: #42463f;
-    --color-tonal-600: #5a5e58;
-    --color-tonal-500: #737771;
-    --color-tonal-400: #8d908c;
+    --color-tonal-900: #1a2c14;
+    --color-tonal-800: #30402a;
+    --color-total-700: #475541;
+    --color-tonal-600: #5e6c59;
+    --color-tonal-500: #778372;
+    --color-tonal-400: #919a8d;
 }
 
 :root {
