--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
     --color-*: initial;
     --color-dark: #000000;
     --color-light: #ffffff;
+    --color-error: #ff0000;
 
     --color-primary-900: #187000;
     --color-primary-800: #3a7f26;
