--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
     --color-dark: #000000;
     --color-light: #ffffff;
     --color-error: #ff0000;
+    --color-dark-error: #800000;
 
     --color-primary-900: #187000;
     --color-primary-800: #3a7f26;
@@ -31,6 +32,7 @@
 :root {
     --color-dark: #000000;
     --color-light: #ffffff;
+    --color-dark-error: #800000;
 
     --color-primary-900: #187000;
     --color-primary-800: #3a7f26;
