--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,8 @@
     --color-light: #ffffff;
     --color-error: #ff0000;
     --color-dark-error: #800000;
+    --color-green-text: #00ff00;
+
 
     --color-primary-900: #187000;
     --color-primary-800: #3a7f26;
@@ -27,6 +29,8 @@
     --color-tonal-600: #5e6c59;
     --color-tonal-500: #778372;
     --color-tonal-400: #919a8d;
+
+    --breakpoint-3xl: 120rem;
 }
 
 :root {
@@ -54,4 +58,10 @@
     --color-tonal-600: #5a5e58;
     --color-tonal-500: #737771;
     --color-tonal-400: #8d908c;
+}
+
+.modalBackground {
+    background-color: rgba(145, 145, 145, 0.171);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(5px);
 }
