--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,3 +60,9 @@
 body {
     background-color: var(--color-surface-900);
 }
+
+.modalBackground {
+    background-color: rgba(145, 145, 145, 0.171);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(5px);
+}
